Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,22 +7,42 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+
+  vmImage: 'ubuntu-latest'
 strategy:
+
   matrix:
     Python27:
+
       python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
 
 steps:
+
 - task: UsePythonVersion@0
+
   inputs:
+
     versionSpec: '$(python.version)'
+
   displayName: 'Use Python $(python.version)'
 
 - script: python "a1.py"
+
+
+
+- task: PythonScript@0
+
+
+  inputs:
+
+
+    scriptSource: 'inline'
+
+
+    script: |
+
+
+      print('Hello world 1')
+
+
+      print('KLU')
